# drone-cli

./: .gitignore  README.md  TestFile.rs
CLI/src/: main.rs
Core/src/: drone.rs  transport.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: api.rs  drone.rs  http_api.rs  lib.rs  transport.rs
core/src/dtos/: requests.rs
core/src/dtos/requests/: drone_requests.rs
core/src/dtos/responses/: mod.rs  telemetry_snapshot.rs
