[package]
name = "dronecore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
bitflags = { version = "2.9.3", features = ["serde"]}
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

